fixed overlapping image by removing negative margin

--- a/styles.css
+++ b/styles.css
@@ -309,7 +309,6 @@ a {
 .text-intro-mobile {
   font-size: 42px;
   margin-top: 32px;
-  margin-bottom: -32px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -325,7 +324,6 @@ a {
 }
 
 .description-mobile {
-  margin-top: -22px;
   font-size: 24px;
   color: #fb5e79;
   text-align: center;
